unique collection name and id swagger api docs
